tests/snapshots/examples_fixtures/base__base_duplicate_except_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_duplicate_except_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E013]: Module Not Imported

Module `Base` is not imported.

  examples/base/base_duplicate_except_error.flx:4:1
  |
4 | Base.print("unreachable");
  | ^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Base`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.
== stdout ==
<not executed>
